# NetNodeGateway

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  REQUIREMENTS.md  TASKS.md  roadmap.md
scenarios/: idle.json  patrol.json  raid.json  stress.json
src/cli/: CMakeLists.txt  cli_client.cpp  cli_client.h
src/common/: CMakeLists.txt  crc32.cpp  crc32.h  event_bus.cpp  event_bus.h  logger.cpp  logger.h  protocol.h  types.h
src/control_node/: CMakeLists.txt  command_handler.cpp  command_handler.h  control_node.cpp  control_node.h  tcp_framer.cpp  tcp_framer.h
src/gateway/: CMakeLists.txt  frame_recorder.cpp  frame_recorder.h  frame_source.h  gateway.cpp  gateway.h  gateway_main.cpp  sequence_tracker.cpp  sequence_tracker.h  stats_manager.cpp  stats_manager.h  telemetry_parser.cpp  telemetry_parser.h  udp_socket.cpp  udp_socket.h
src/replay/: CMakeLists.txt  replay_engine.cpp  replay_engine.h  replay_main.cpp
src/sensor_sim/: CMakeLists.txt  fault_injector.cpp  fault_injector.h  measurement_generator.cpp  measurement_generator.h  object_generator.cpp  object_generator.h  scenario_loader.cpp  scenario_loader.h  sensor_sim_main.cpp  world_model.cpp  world_model.h
tests/: test_command_handler.cpp  test_crc32.cpp  test_e2e_replay.cpp  test_event_bus.cpp  test_fault_injector.cpp  test_frame_recorder.cpp  test_full_system.cpp  test_full_system_faults.cpp  test_log_format.cpp  test_logger.cpp  test_measurement_generator.cpp  test_object_generator.cpp  test_pipeline_integration.cpp  test_replay_determinism.cpp  test_replay_engine.cpp  test_scenario_loader.cpp  test_sequence_tracker.cpp  test_stats_manager.cpp  test_tcp_framer.cpp  test_tcp_loopback.cpp  test_telemetry_parser.cpp  test_udp_loopback.cpp  test_world_model.cpp
